// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borders renders correctly when an outer border is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c2 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c0 {
  display: inline-block;
  border: 1px solid #b3b3b3;
  border-radius: 5px;
  padding: 0.25rem 0.5rem;
}

<div
  class="c0 c1"
>
  <table
    class="c2 c1"
  >
    <thead
      class="c3 c1"
    >
      <tr
        class="c1"
      >
        <th
          class="c4 c1"
        >
          Name
        </th>
        <th
          class="c4 c1"
        >
          Quantity
        </th>
        <th
          class="c4 c1"
        >
          Price
        </th>
      </tr>
    </thead>
    <tbody
      class="c1"
    >
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Nike
        </td>
        <td
          class="c5 c1"
        >
          3
        </td>
        <td
          class="c5 c1"
        >
          $9.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          Adidas
        </td>
        <td
          class="c5 c1"
        >
          4
        </td>
        <td
          class="c5 c1"
        >
          $12.00
        </td>
      </tr>
      <tr
        class="c1"
      >
        <td
          class="c5 c1"
        >
          North Face
        </td>
        <td
          class="c5 c1"
        >
          5
        </td>
        <td
          class="c5 c1"
        >
          $15.00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`borders renders correctly when row borders are set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  padding: 0.5rem;
}

.c2 {
  border: unset;
}

.c2 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c5 .c3 {
  border-bottom: 1px solid #b3b3b3;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

<table
  class="c0 c1"
>
  <thead
    class="c2 c1"
  >
    <tr
      class="c3 c1"
    >
      <th
        class="c4 c1"
      >
        Name
      </th>
      <th
        class="c4 c1"
      >
        Quantity
      </th>
      <th
        class="c4 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c5 c1"
  >
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        Nike
      </td>
      <td
        class="c6 c1"
      >
        3
      </td>
      <td
        class="c6 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        Adidas
      </td>
      <td
        class="c6 c1"
      >
        4
      </td>
      <td
        class="c6 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        North Face
      </td>
      <td
        class="c6 c1"
      >
        5
      </td>
      <td
        class="c6 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a basic table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  padding: 0.5rem;
}

.c2 {
  border: unset;
}

.c2 {
  border-bottom: 2px solid #b3b3b3;
}

.c3 {
  font-weight: bold;
  padding: 0.5rem;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

<table
  class="c0 c1"
>
  <thead
    class="c2 c1"
  >
    <tr
      class="c1"
    >
      <th
        class="c3 c1"
      >
        Name
      </th>
      <th
        class="c3 c1"
      >
        Quantity
      </th>
      <th
        class="c3 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c1"
  >
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Nike
      </td>
      <td
        class="c4 c1"
      >
        3
      </td>
      <td
        class="c4 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Adidas
      </td>
      <td
        class="c4 c1"
      >
        4
      </td>
      <td
        class="c4 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        North Face
      </td>
      <td
        class="c4 c1"
      >
        5
      </td>
      <td
        class="c4 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a full width table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  padding: 0.5rem;
}

.c2 {
  border: unset;
}

.c2 {
  border-bottom: 2px solid #b3b3b3;
}

.c3 {
  font-weight: bold;
  padding: 0.5rem;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c0 {
  width: 100%;
}

<table
  class="c0 c1"
>
  <thead
    class="c2 c1"
  >
    <tr
      class="c1"
    >
      <th
        class="c3 c1"
      >
        Name
      </th>
      <th
        class="c3 c1"
      >
        Quantity
      </th>
      <th
        class="c3 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c1"
  >
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Nike
      </td>
      <td
        class="c4 c1"
      >
        3
      </td>
      <td
        class="c4 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Adidas
      </td>
      <td
        class="c4 c1"
      >
        4
      </td>
      <td
        class="c4 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        North Face
      </td>
      <td
        class="c4 c1"
      >
        5
      </td>
      <td
        class="c4 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a hoverable table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  padding: 0.5rem;
}

.c2 {
  border: unset;
}

.c2 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c7 .c3 {
  border-bottom: 1px solid #b3b3b3;
}

.c8 .c5 .c3:nth-child(even) {
  background-color: #f7f7f7;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c0 .c5 .c3:hover {
  background-color: #f2f2f2 !important;
}

<table
  class="c0 c1"
>
  <thead
    class="c2 c1"
  >
    <tr
      class="c3 c1"
    >
      <th
        class="c4 c1"
      >
        Name
      </th>
      <th
        class="c4 c1"
      >
        Quantity
      </th>
      <th
        class="c4 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c5 c1"
  >
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        Nike
      </td>
      <td
        class="c6 c1"
      >
        3
      </td>
      <td
        class="c6 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        Adidas
      </td>
      <td
        class="c6 c1"
      >
        4
      </td>
      <td
        class="c6 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        North Face
      </td>
      <td
        class="c6 c1"
      >
        5
      </td>
      <td
        class="c6 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a striped table 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  padding: 0.5rem;
}

.c2 {
  border: unset;
}

.c2 {
  border-bottom: 2px solid #b3b3b3;
}

.c4 {
  font-weight: bold;
  padding: 0.5rem;
}

.c7 .c3 {
  border-bottom: 1px solid #b3b3b3;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c0 .c5 .c3:nth-child(even) {
  background-color: #f7f7f7;
}

<table
  class="c0 c1"
>
  <thead
    class="c2 c1"
  >
    <tr
      class="c3 c1"
    >
      <th
        class="c4 c1"
      >
        Name
      </th>
      <th
        class="c4 c1"
      >
        Quantity
      </th>
      <th
        class="c4 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c5 c1"
  >
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        Nike
      </td>
      <td
        class="c6 c1"
      >
        3
      </td>
      <td
        class="c6 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        Adidas
      </td>
      <td
        class="c6 c1"
      >
        4
      </td>
      <td
        class="c6 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c3 c1"
    >
      <td
        class="c6 c1"
      >
        North Face
      </td>
      <td
        class="c6 c1"
      >
        5
      </td>
      <td
        class="c6 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a table with a bottom caption 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  caption-side: bottom;
}

.c7 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c5 {
  font-weight: bold;
  padding: 0.5rem;
}

.c8 .c4 {
  border-bottom: 1px solid #b3b3b3;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c9 .c6 .c4:nth-child(even) {
  background-color: #f7f7f7;
}

.c10 .c6 .c4:hover {
  background-color: #f2f2f2 !important;
}

<table
  class="c0 c1"
>
  <caption
    class="c2 c1"
    style="position: bottom;"
  >
    Fannypacks
  </caption>
  <thead
    class="c3 c1"
  >
    <tr
      class="c4 c1"
    >
      <th
        class="c5 c1"
      >
        Name
      </th>
      <th
        class="c5 c1"
      >
        Quantity
      </th>
      <th
        class="c5 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c6 c1"
  >
    <tr
      class="c4 c1"
    >
      <td
        class="c7 c1"
      >
        Nike
      </td>
      <td
        class="c7 c1"
      >
        3
      </td>
      <td
        class="c7 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c4 c1"
    >
      <td
        class="c7 c1"
      >
        Adidas
      </td>
      <td
        class="c7 c1"
      >
        4
      </td>
      <td
        class="c7 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c4 c1"
    >
      <td
        class="c7 c1"
      >
        North Face
      </td>
      <td
        class="c7 c1"
      >
        5
      </td>
      <td
        class="c7 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a table with a footer 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  padding: 0.5rem;
}

.c5 {
  font-weight: bold;
}

.c5 {
  border-top: 2px solid #b3b3b3;
}

.c2 {
  border: unset;
}

.c2 {
  border-bottom: 2px solid #b3b3b3;
}

.c3 {
  font-weight: bold;
  padding: 0.5rem;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

<table
  class="c0 c1"
>
  <thead
    class="c2 c1"
  >
    <tr
      class="c1"
    >
      <th
        class="c3 c1"
      >
        Name
      </th>
      <th
        class="c3 c1"
      >
        Quantity
      </th>
      <th
        class="c3 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c1"
  >
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Nike
      </td>
      <td
        class="c4 c1"
      >
        3
      </td>
      <td
        class="c4 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Adidas
      </td>
      <td
        class="c4 c1"
      >
        4
      </td>
      <td
        class="c4 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        North Face
      </td>
      <td
        class="c4 c1"
      >
        5
      </td>
      <td
        class="c4 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
  <tfoot
    class="c5 c1"
  >
    <tr
      class="c1"
    >
      <td
        class="c4 c1"
      >
        Total
      </td>
      <td
        class="c4 c1"
      />
      <td
        class="c4 c1"
      >
        $36.00
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`renders correctly for a table with a top caption 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  caption-side: top;
}

.c7 {
  padding: 0.5rem;
}

.c3 {
  border: unset;
}

.c3 {
  border-bottom: 2px solid #b3b3b3;
}

.c5 {
  font-weight: bold;
  padding: 0.5rem;
}

.c8 .c4 {
  border-bottom: 1px solid #b3b3b3;
}

.c0 {
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
}

.c9 .c6 .c4:nth-child(even) {
  background-color: #f7f7f7;
}

.c10 .c6 .c4:hover {
  background-color: #f2f2f2 !important;
}

<table
  class="c0 c1"
>
  <caption
    class="c2 c1"
    style="position: top;"
  >
    Fannypacks
  </caption>
  <thead
    class="c3 c1"
  >
    <tr
      class="c4 c1"
    >
      <th
        class="c5 c1"
      >
        Name
      </th>
      <th
        class="c5 c1"
      >
        Quantity
      </th>
      <th
        class="c5 c1"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    class="c6 c1"
  >
    <tr
      class="c4 c1"
    >
      <td
        class="c7 c1"
      >
        Nike
      </td>
      <td
        class="c7 c1"
      >
        3
      </td>
      <td
        class="c7 c1"
      >
        $9.00
      </td>
    </tr>
    <tr
      class="c4 c1"
    >
      <td
        class="c7 c1"
      >
        Adidas
      </td>
      <td
        class="c7 c1"
      >
        4
      </td>
      <td
        class="c7 c1"
      >
        $12.00
      </td>
    </tr>
    <tr
      class="c4 c1"
    >
      <td
        class="c7 c1"
      >
        North Face
      </td>
      <td
        class="c7 c1"
      >
        5
      </td>
      <td
        class="c7 c1"
      >
        $15.00
      </td>
    </tr>
  </tbody>
</table>
`;
